Add an "Export all Points" control to the Points control section (formerly "Load Points")

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -11,7 +11,7 @@
         <h2 id="api-key-control" class="interactive">API Key</h2>
       </div>
       <div class="control expandable">
-        <label for="load-points-menu-button"><h2 class="interactive">Load Points</h2></label>
+        <label for="load-points-menu-button"><h2 class="interactive">Points</h2></label>
         <input type="checkbox" name="load-points-menu-button" id="load-points-menu-button"/>
         <ul class="menu">
           <li>
@@ -40,6 +40,10 @@
               </div>
               <button type="submit" class="button">Load From DB</button>
             </form>
+          </li>
+          <li>
+            <button id="export-all-points-control" class="button">Export All Points</button>
+            <p>To export only the points in a polygon, click on the polygon</p>
           </li>
         </ul>
 
