Replace "Set Location" control with smarter viewports that remember where you were and can center when points are loaded.

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -45,11 +45,10 @@
             <button id="export-all-points-control" class="button">Export All Points</button>
             <p>To export only the points in a polygon, click on the polygon</p>
           </li>
+          <li>
+            <input id="center-map-control" name="center-map-control" type="checkbox"><label for="center-map-control">Center map when points load</label>
+          </li>
         </ul>
-
-      </div>
-      <div class="control">
-        <div id="set-location-control"><h2 class="interactive">Set Location</h2></div>
       </div>
     </section>
     <section id="map"></section>
