Add a "Merge from File" control to the "Points" menu.

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -17,6 +17,8 @@
           <li>
             <label for="load-from-file-control" class="secondary-title"><div class="button">Load From File</div></label>
             <input type="file" id="load-from-file-control" name="load-from-file-control"/>
+            <label for="merge-from-file-control" class="secondary-title"><div class="button">Merge From File</div></label>
+            <input type="file" id="merge-from-file-control" name="merge-from-file-control"/>
           </li>
           <li>
             <form id="load-from-db-form">
