Add a "Merge From DB" control to the "Points" menu.

--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -40,7 +40,7 @@
                 <div class="text-input"><label>sqlite file: </label><input name="storage" type="text" /></div>
                 <p class="disclaimer">Browsers restrict access to your file system so you will have to manually type the full path to your sqlite file.</p>
               </div>
-              <button type="submit" class="button">Load From DB</button>
+              <button type="submit" class="button" name="mergePoints" value="false">Load From DB</button> <button type="submit" class="button" name="mergePoints" value="true">Merge From DB</button>
             </form>
           </li>
           <li>
